update some wrong keys in resources and add some lacked strings (those string need to be translated)

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -18,7 +18,7 @@ PHARMACY=Pharmacy
 MANAGEMENT=System Management
 PERMISSION=Permission
 MEDICINE_STOCK=Medicine Stock
-MEDICAL HISTORYT=Medical History
+MEDICAL_HISTORYT=Medical History
 POSITION_MANAGEMENT=Position Management
 DEPARTMENT_MANAGEMENT=Department Management
 SHIFT_MANAGEMENT=Shift Management
@@ -33,6 +33,14 @@ EXIT=Exit
 LABORATORY=Laboratory
 INVESTGATIONS=Investgations
 RADIOLOGY(X-RAY)=X-RAY
+FORDER_RETURN=Folder Return
+CLINIC=Clinic
+LOGOUT=Logout
+STATISTIC=Statistic
+CASHIER=Cashier
+POLINLIC_MANAGEMENT=Polinlic Management
+CASE_MANAGEMENT=Case Management
+MOBILE_HEALTH=Mobile Health
 
 @RADIOLOGY
 NO=No
