--- a/src/lang/language_es.properties
+++ b/src/lang/language_es.properties
@@ -18,7 +18,7 @@ PHARMACY=Farmacia
 MANAGEMENT=Sistema de Gestión
 PERMISSION=Permiso
 MEDICINE_STOCK=Colección de Medicina
-MEDICAL HISTORYT=Historial médico
+MEDICAL_HISTORYT=Historial médico
 POSITION_MANAGEMENT=Gerencia
 DEPARTMENT_MANAGEMENT=Departamento de Administración
 SHIFT_MANAGEMENT=Cambio de gestión
@@ -33,6 +33,14 @@ EXIT=Salida
 LABORATORY=Laboratorio
 INVESTGATIONS=Investgations
 RADIOLOGY(X-RAY)=X-RAY
+FORDER_RETURN=Folder Return
+CLINIC=Clinic
+LOGOUT=Logout
+STATISTIC=Statistic
+CASHIER=Cashier
+POLINLIC_MANAGEMENT=Polinlic Management
+CASE_MANAGEMENT=Case Management
+MOBILE_HEALTH=Mobile Health
 
 @RADIOLOGY
 NO=No
