--- a/src/lang/language_fr.properties
+++ b/src/lang/language_fr.properties
@@ -18,7 +18,7 @@ PHARMACY=Pharmacie
 MANAGEMENT=Système de gestion
 PERMISSION=Autorisation
 MEDICINE_STOCK=Médecine Stock
-MEDICAL HISTORYT=Histoire de la Médecine
+MEDICAL_HISTORYT=Histoire de la Médecine
 POSITION_MANAGEMENT=Position de gestion
 DEPARTMENT_MANAGEMENT=Département de la gestion
 SHIFT_MANAGEMENT=Shift de gestion
@@ -33,6 +33,14 @@ EXIT=Sortie
 LABORATORY=Laboratoire
 INVESTGATIONS=Investgations
 RADIOLOGY(X-RAY)=X-RAY
+FORDER_RETURN=Folder Return
+CLINIC=Clinic
+LOGOUT=Logout
+STATISTIC=Statistic
+CASHIER=Cashier
+POLINLIC_MANAGEMENT=Polinlic Management
+CASE_MANAGEMENT=Case Management
+MOBILE_HEALTH=Mobile Health
 
 @RADIOLOGY
 NO=Aucun
