add lang (FIRSTTIMEVISIT)

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -847,3 +847,7 @@ NOTFONDGPSUSBPORTNUMBER=Not Found GPS USB Port Number.
 NOTFONDGPSINFORMATION=Not Found GPS Information.
 YOUNEEDGIVEMOREKEYWORDS=You need give more keywords.
 CANYOUTAKENOUTDIAGNOSISDATALASTTIME=Can you taken out Diagnosis data last time?
+
+
+
+FIRSTTIMEVISIT=First time visit.
