add multilanguage support for setting module

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -855,3 +855,28 @@ NOTFONDGPSUSBPORTNUMBER=Not Found GPS USB Port Number.
 NOTFONDGPSINFORMATION=Not Found GPS Information.
 YOUNEEDGIVEMOREKEYWORDS=You need give more keywords.
 CANYOUTAKENOUTDIAGNOSISDATALASTTIME=Can you taken out Diagnosis data last time?
+
+
+
+
+
+
+CHOOSE=Choose
+HOSPITALNAME=Hospital Name
+HOSPITALPHONE=Hospital Phone
+HOSPITALADDRESS=Hospital Address
+HOSPITALICON=Hospital Icon
+SYSTEMLANGUAGE=System Language
+ICDVERSION=ICD Version
+FROM=from
+TO=to
+DIVISION=Division
+DIVISIONLIST=Division list
+AddDivision=Add division
+BED=Bed
+ADDCLINICFOR=Add clinic for
+CLINICLISTOFDIVISION=clinic list of Division
+STATUS=status
+ERROR=Error
+ADDDIVISIONCLINICCOMPLETE=Add division clinic complete
+PLEASESELECTDIVISIONFIRST=Please select a division first
