1. remove some key/value pairs in language.property because their meaning is not consistent. 2. add multilanguage support for staff management

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -90,7 +90,6 @@ DATE=Date :
 CANCELREGISTRATION=Cancel Registration
 CANCEL=Cancel
 NEWPATIENT=Add Patient
-SAVE=Register
 FINGERPRINTSEARCH=Search...
 REGISTEREDLIST=Registered List
 REISTER=Locality
@@ -530,13 +529,12 @@ ADDRESS=Address :
 LASTNAME=LastName :
 GENDER=Gender :
 DEPARMENT=Department :
-POSITION=Title :
 ADDSAVE=Add
 UPDATE=Update
 UPDATESAVE=Save
 
 @STAFFINFO
-STAFFINFOMATION=Staff Infomation
+STAFFINFOMATION=Staff Information
 GENERALADD=Add
 GENERALEDIT=Details
 GENERALDELETE=Delete
@@ -779,7 +777,6 @@ GROUP=Group :
 POLICLINIC=Policlinic :
 GRADELEVEL=Grade Level :
 CATEGORYPOST=Category Post :
-POSITION=Position :
 LEVEL=Level :
 STEP=Step :
 GROOSSALARY=Groos Salary :
@@ -880,3 +877,5 @@ STATUS=status
 ERROR=Error
 ADDDIVISIONCLINICCOMPLETE=Add division clinic complete
 PLEASESELECTDIVISIONFIRST=Please select a division first
+CURRENTEMPLOYED=Current Employed
+CONTACTNUMBER=Contact number
