Fix the wrong key value mapping.

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -636,8 +636,8 @@ TITLEWORKLIST=Work List
 EDIT=Edit
 ENTER=Enter
 
-@DIAGNOSISTHERAPY
-THERAPY=Diagnosis
+
+DIAGNOSIS_THERAPY=Diagnosis
 TITLETHERAPY=Therapy
 FILE=File
 ICDCODE=ICD Code
@@ -646,13 +646,13 @@ VERSION=Version : ICD 10
 
 @DIAGNOSISPRESRIPTION
 TITLEPRESCRIPTION=Prescription
-THERAPY=Prescription
+PRESRIPTION_THERAPY=Prescription
 VERSION=Version : TEST
 CODE=Code
 TREATMENT=Treatment
 
 @DIAGNOSISMEDICINE
-THERAPY=Medicine
+MEDICINE_THERAPY=Medicine
 TITLEMEDICINE=Medicine
 TITLEPRESCRIPTION=Prescription
 ITEM=Item
