--- a/src/lang/language_es.properties
+++ b/src/lang/language_es.properties
@@ -642,8 +642,7 @@ TITLEWORKLIST=Lista de trabajos
 EDIT=Editar
 ENTER=Entrar
 
-@DIAGNOSISTHERAPY
-THERAPY=Diagnóstico
+DIAGNOSIS_THERAPY=Diagnóstico
 TITLETHERAPY=Terapia
 FILE=Expediente
 ICDCODE=Código ICD
@@ -651,13 +650,13 @@ NAME=Nombre
 VERSION=Versión: CIE 10
 
 @DIAGNOSISPRESRIPTION
-THERAPY=Prescripción
+PRESRIPTION_THERAPY=Prescripción
 VERSION=Versión: PRUEBA
 CODE=Código
 TREATMENT=Tratamiento
 
 @DIAGNOSISMEDICINE
-THERAPY=Medicina
+MEDICINE_THERAPY=Medicina
 TITLEMEDICINE=Medicina
 TITLEPRESCRIPTION=Prescripción
 ITEM=Artículo
