--- a/src/lang/language_fr.properties
+++ b/src/lang/language_fr.properties
@@ -642,8 +642,7 @@ TITLEWORKLIST=Liste de travail
 EDIT=Éditer
 ENTER=Entrer
 
-@DIAGNOSISTHERAPY
-THERAPY=Diagnostic
+DIAGNOSIS_THERAPY=Diagnostic
 TITLETHERAPY=Thérapie
 FILE=Dossier
 ICDCODE=Code CIM
@@ -651,13 +650,13 @@ NAME=Nom
 VERSION=Version: CIM 10
 
 @DIAGNOSISPRESRIPTION
-THERAPY=Prescription
+PRESRIPTION_THERAPY=Prescription
 VERSION=Version: TEST
 CODE=Code
 TREATMENT=Traitement
 
 @DIAGNOSISMEDICINE
-THERAPY=Médecine
+MEDICINE_THERAPY=Médecine
 TITLEMEDICINE=Médecine
 TITLEPRESCRIPTION=Prescription
 ITEM=Point
