1. shift schedule can schedule today's shift 2. add Hospital Code input UI

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -863,6 +863,7 @@ FIRSTTIMEVISIT=First time visit.
 
 
 CHOOSE=Choose
+HOSPITALCODE=Hospital Code
 HOSPITALNAME=Hospital Name
 HOSPITALPHONE=Hospital Phone
 HOSPITALADDRESS=Hospital Address
