[not complete] add repeat schedule function

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -532,7 +532,6 @@ UPDATE=Update
 UPDATESAVE=Save
 
 @STAFFINFO
-STAFFINFOMATION=Staff Information
 GENERALADD=Add
 GENERALEDIT=Details
 GENERALDELETE=Delete
@@ -576,7 +575,6 @@ NOINFORMATION=No Information.
 
 @MEDICINESTOCKPURCHASE
 MEDICINENAME=Medicine :
-DATE=Date :
 COMPANY=Company :
 QUANTITY=Quantity :
 PRICE=Price :
@@ -854,8 +852,13 @@ CANYOUTAKENOUTDIAGNOSISDATALASTTIME=Can you taken out Diagnosis data last time?
 @ modify of original property
 SHIFT_MANAGEMENT=Schedule Management
 STAFF_MANAGEMENT=HR Management
+STAFFINFOMATION=Staff Information
 
 @ delete from original property
+@SAVE=Register
+@POSITION=Title :
+@POSITION=Position :
+@DATE=Date :
 
 @ add to original property
 
@@ -884,3 +887,6 @@ ADDDIVISIONCLINICCOMPLETE=Add division clinic complete
 PLEASESELECTDIVISIONFIRST=Please select a division first
 CURRENTEMPLOYED=Current Employed
 CONTACTNUMBER=Contact number
+REPEAT=Repeat
+TIMES=times
+PLEASEENTERVALIDNUMBER=Please enter valid number
