Add repeat shift schedule feature

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -890,3 +890,4 @@ CONTACTNUMBER=Contact number
 REPEAT=Repeat
 TIMES=times
 PLEASEENTERVALIDNUMBER=Please enter valid number
+REPEATPERIODHASDATA=Error! Repeated period existed data.
