--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -24,7 +24,6 @@ DEPARTMENT_MANAGEMENT=Department Management
 ANAMNESIS_RETURN=Anamnesis Return
 ANAMNESIS_MANAGEMENT=Anamnesis Management
 PATIENT_INFORMATION=Patient Information
-DIAGNOSIS=Diagnosis
 REGISTRATION=Registration
 REVIEW=Review
 EXIT=Exit
@@ -649,7 +648,7 @@ TREATMENT=Treatment
 
 @DIAGNOSISMEDICINE
 MEDICINE_THERAPY=Medicine
-TITLEMEDICINE=Medicine
+
 TITLEPRESCRIPTION=Prescription
 ITEM=Item
 INJECTION=Information
@@ -692,12 +691,12 @@ TITLEAGE=Age :
 TITLEBLOODTYPE=Blood type :
 WEIGHT=Weight :
 PS=P.S.
-MEDICALRECORDSUMMARY=Medical Record Summary
-DIAGNSIS=Diagnosis
+
+
 MEDICINE=Medicine
 PRESCRIPTION=Prescription
 CODE=Code
-DIAGNOSIS=Diagnosis
+
 TREATMENT=Treatment
 PLACE=Place
 MEDICINE=Medicine
@@ -710,7 +709,7 @@ DAY=Day
 QUANTITLY=Quantity
 URGENT=Urgent
 POWDER=Psdsd
-DIAGNOSIS=Diagnosis Code
+
 PRESCRIPTIONCODE=Prescription Code
 MEDICINECODE=Medicine Code
 CASEHISTORY=Case History
@@ -734,8 +733,8 @@ CLEARDIAGNOSIS=Clear Diagnosis
 CLEARPRESCRIPTION=Clear Prescription
 CLEARMEDICINE=Clear Medicine
 
-CENTERTOP=Medical Record Summary
-DIAGNOSIS=Diagnosis
+
+
 DOCTOR=Doctor
 
 @LABORATORY
@@ -853,12 +852,19 @@ CANYOUTAKENOUTDIAGNOSISDATALASTTIME=Can you taken out Diagnosis data last time?
 SHIFT_MANAGEMENT=Schedule Management
 STAFF_MANAGEMENT=HR Management
 STAFFINFOMATION=Staff Information
+MEDICALRECORDSUMMARY=S O A P
+DIAGNOSIS_CODE=Diagnosis Code
+DIAGNOSIS=Diagnosis
+TITLEMEDICINE=Medicine Code
 
 @ delete from original property
 @SAVE=Register
 @POSITION=Title :
 @POSITION=Position :
 @DATE=Date :
+@DIAGNSIS=Diagnosis
+@DIAGNOSIS=Diagnosis Code
+@CENTERTOP=Medical Record Summary
 
 @ add to original property
 
