1. fix setting bug: "disableds" -> "disabled" 2. modify main page layout to add "stock management" UI 3. incomplete stock management

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -891,3 +891,5 @@ REPEAT=Repeat
 TIMES=times
 PLEASEENTERVALIDNUMBER=Please enter valid number
 REPEATPERIODHASDATA=Error! Repeated period existed data.
+PERSONNELMANAGEMENT=Personnel Management
+STOCKMANAGEMENT=Stock Management
