--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -577,7 +577,6 @@ NOINFORMATION=No Information.
 MEDICINENAME=Medicine :
 COMPANY=Company :
 QUANTITY=Quantity :
-PRICE=Price :
 DELETE=Delete
 ADD=Add
 SEND=Send
@@ -586,7 +585,6 @@ DRUGGIST=Druggist
 QUANTITY=Quantity
 DATE=Date
 PRICE=Price
-TITLEMEDICINEPURCHASE=Medicine Purchase
 
 @MEDICINESTOCKPURCHASELIST
 QUANTITY=Quantity :
@@ -853,12 +851,14 @@ CANYOUTAKENOUTDIAGNOSISDATALASTTIME=Can you taken out Diagnosis data last time?
 SHIFT_MANAGEMENT=Schedule Management
 STAFF_MANAGEMENT=HR Management
 STAFFINFOMATION=Staff Information
+TITLEMEDICINEPURCHASE=Pharmacy Purchase
 
 @ delete from original property
 @SAVE=Register
 @POSITION=Title :
 @POSITION=Position :
 @DATE=Date :
+PRICE=Price :
 
 @ add to original property
 
@@ -893,3 +893,12 @@ PLEASEENTERVALIDNUMBER=Please enter valid number
 REPEATPERIODHASDATA=Error! Repeated period existed data.
 PERSONNELMANAGEMENT=Personnel Management
 STOCKMANAGEMENT=Stock Management
+PHARMACYSTOCK=Pharmacy Stock
+
+VENDOR=Vendor
+PURCHASEDATE=Purchase date
+TOTALCOST=Total cost
+TOTALQUANTITY=Total quantity
+MODIFY=Modify
+PURCHASEHISTORY=Purchase History
+SAVEMODIFICATION=Save modification
