[GUI]Add a button RETURN in Frm_Pharmacy.

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -909,3 +909,4 @@ TOTALQUANTITY=Total quantity
 MODIFY=Modify
 PURCHASEHISTORY=Purchase History
 SAVEMODIFICATION=Save modification
+RETURNTOMERCHANT=Return
