[Add] Frm_ReturnToMerchant

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -909,4 +909,4 @@ TOTALQUANTITY=Total quantity
 MODIFY=Modify
 PURCHASEHISTORY=Purchase History
 SAVEMODIFICATION=Save modification
-RETURNTOMERCHANT=Return
+RETURNTOMERCHANT=Return to Merchant
