[ReturnToMerchant] Add language.

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -910,3 +910,10 @@ MODIFY=Modify
 PURCHASEHISTORY=Purchase History
 SAVEMODIFICATION=Save modification
 RETURNTOMERCHANT=Return to Merchant
+COL_MEDICINE_CODE=CODE
+COL_MEDICINE_NAME=NAME
+COL_MEDICINE_DOSAGE=DOSAGE
+COL_MEDICINE_UNIT=UNIT
+COL_MEDICINE_QUANTITY=QUANTITY
+COL_MEDICINE_UNIT_PRICE=UNIT_PRICE
+COL_MEDICINE_TOTAL_PRICE=TOTAL_PRICE
