[Feature] change the default summary to soap & refine the medicine online hint with unit dosage

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -851,7 +851,7 @@ CANYOUTAKENOUTDIAGNOSISDATALASTTIME=Can you taken out Diagnosis data last time?
 SHIFT_MANAGEMENT=Schedule Management
 STAFF_MANAGEMENT=HR Management
 STAFFINFOMATION=Staff Information
-MEDICALRECORDSUMMARY=S O A P
+MEDICALRECORDSUMMARY=Summary
 DIAGNOSIS_CODE=Diagnosis Code
 DIAGNOSIS=Diagnosis
 TITLEMEDICINE=Medicine Code
