add bed management button

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -900,6 +900,7 @@ PLEASEENTERVALIDNUMBER=Please enter valid number
 REPEATPERIODHASDATA=Error! Repeated period existed data.
 PERSONNELMANAGEMENT=Personnel Management
 STOCKMANAGEMENT=Stock Management
+BEDMANAGEMENT=Bed Management
 PHARMACYSTOCK=Pharmacy Stock
 
 VENDOR=Vendor
