--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -918,3 +918,6 @@ COL_MEDICINE_UNIT=UNIT
 COL_MEDICINE_QUANTITY=QUANTITY
 COL_MEDICINE_UNIT_PRICE=UNIT_PRICE
 COL_MEDICINE_TOTAL_PRICE=TOTAL_PRICE
+CHECKINDATE=Check in date
+CHECKOUTDATE=Check out date
+INPATIENT=Inpatient
