[Incomplete][New Registration Frame] Old functions ready, except table refresh trigger by Date.

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -921,3 +921,4 @@ COL_MEDICINE_TOTAL_PRICE=TOTAL_PRICE
 CHECKINDATE=Check in date
 CHECKOUTDATE=Check out date
 INPATIENT=Inpatient
+SHIFTID=Shift ID
