[Feature] Inpatient work list done

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -918,3 +918,8 @@ COL_MEDICINE_UNIT=UNIT
 COL_MEDICINE_QUANTITY=QUANTITY
 COL_MEDICINE_UNIT_PRICE=UNIT_PRICE
 COL_MEDICINE_TOTAL_PRICE=TOTAL_PRICE
+
+INPATIENT_WORKLIST = Inpatient WorkList
+COL_NOTE = Note
+COL_BED_NO = BedNo
+COL_CHECKINTIME = CheckInTime
