[Feature] enable medical history in inpatient list

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -930,3 +930,5 @@ SHIFTID=Shift ID
 BEDDESCRIPTION=Description
 
 CHECKOUT=Check Out
+COL_CHECKOUTTIME = CheckOutTime
+COL_MAIN_DOCTOR = Main Doctor
