--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -928,3 +928,8 @@ CHECKOUTDATE=Check out date
 INPATIENT=Inpatient
 SHIFTID=Shift ID
 BEDDESCRIPTION=Description
+INPATIENTTYPE=Inpatient Type:
+ONDESKINPATIENT=On Desk Inpatient
+MAKERESERVATION=Make Reservation
+RESERVEDCHECKIN=Reserved Check In
+BOBILEREGISTRATION=Mobile Registration
