[feature] add pharmacy disposal function [incomplete] print pharmacy table

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -584,7 +584,7 @@ DRUGGIST=Druggist
 QUANTITY=Quantity
 DATE=Date
 PRICE=Price
-TITLEMEDICINEPURCHASE=Medicine Purchase
+TITLEMEDICINEPURCHASE=Pharmacy Purchase
 
 @MEDICINESTOCKPURCHASELIST
 QUANTITY=Quantity :
@@ -935,3 +935,7 @@ COL_MAIN_DOCTOR = Main Doctor
 
 ADDCOMPLETE=Add Complete
 DISPOSE=Dispose
+
+TITLEPHARMACYDISPOSE=Pharmacy dispose
+DISPOSALEDATE=Disposal date
+CANNOTDISPOSE=Can not dispose
