[incomplete] Material Stock Management

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -939,3 +939,4 @@ DISPOSE=Dispose
 TITLEPHARMACYDISPOSE=Pharmacy dispose
 DISPOSALEDATE=Disposal date
 CANNOTDISPOSE=Can not dispose
+MATERIALSTOCK=Material stock
