[incomplete] Material stock. imcomplete: 1. purchase history 2. disposal 3. print

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -940,3 +940,5 @@ TITLEPHARMACYDISPOSE=Pharmacy dispose
 DISPOSALEDATE=Disposal date
 CANNOTDISPOSE=Can not dispose
 MATERIALSTOCK=Material stock
+MATERIALPURCHASE=Material purchase
+MATERIAL=Material
