[Feature] enable to show patient no

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -947,3 +947,5 @@ CANNOTDISPOSE=Can not dispose
 MATERIALSTOCK=Material stock
 MATERIALPURCHASE=Material purchase
 MATERIAL=Material
+
+INPATIENT_NO = No.:
