[Requirement Implement] 1. 辦理住院的日期沒有帶到時間，只有年月日
2. 在我們的測試過程中也發現同一個病人可以同時間入住很多張病床，是否可以有個檢查機制

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -939,3 +939,4 @@ ONDESKINPATIENT=On Desk Inpatient
 MAKERESERVATION=Make Reservation
 RESERVEDCHECKIN=Reserved Check In
 BOBILEREGISTRATION=Mobile Registration
+ERRORALREADYINPATIENT=Error already inpatient
