[Feature] Bed Management shows total bed/occupied bed/empty bed

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -947,6 +947,9 @@ CANNOTDISPOSE=Can not dispose
 MATERIALSTOCK=Material stock
 MATERIALPURCHASE=Material purchase
 MATERIAL=Material
+EMPTY=Empty
+OCCUPIED=Occupied
+TOTAL=Total
 
 INPATIENT_NO = No.:
 CHECK_IN_DATE = Checkin Date:
