[Feature] add Material Code Maintenance

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -902,6 +902,7 @@ PERSONNELMANAGEMENT=Personnel Management
 STOCKMANAGEMENT=Stock Management
 BEDMANAGEMENT=Bed Management
 PHARMACYSTOCK=Pharmacy Stock
+CODEMAINTENANCE=Code Maintenance
 
 VENDOR=Vendor
 PURCHASEDATE=Purchase date
