--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -964,3 +964,8 @@ CHECK_IN_DATE = Checkin Date:
 ERRORALREADYINPATIENT=Error already inpatient
 MEDICINEEDUCATION=Medicine Eductaion
 AMOUNTRECEIVABLE=Amount Receivable
+
+CANCENL=Cancel
+PRINT_LABEL = Label
+PRINT_DIAGNOSIS_COVER = Diagnosis Cover
+PRINT_REGSITER_CARD= Register Card
