[Print] Registration history Cancel/Reprint.

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -404,6 +404,7 @@ LEAVEWITHOUTPAY=Leave without pay
 @SHIFTWORKINFO
 POLICLINIC=Policlinic :
 POLROOM=Room :
+ROOM=Room
 YEAR=Year :
 MONTH=Month :
 RELOAD=Re-read
