[Incomplete] Camera Library Adapter Demo with 患部攝影

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -904,6 +904,8 @@ STOCKMANAGEMENT=Stock Management
 BEDMANAGEMENT=Bed Management
 PHARMACYSTOCK=Pharmacy Stock
 CODEMAINTENANCE=Code Maintenance
+IMAGEMANAGEMENT=Image Management
+TAKEIMAGE=Take Image
 
 VENDOR=Vendor
 PURCHASEDATE=Purchase date
