[Feature] Foot exam UI done

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -970,3 +970,7 @@ CANCENL=Cancel
 PRINT_LABEL = Label
 PRINT_DIAGNOSIS_COVER = Diagnosis Cover
 PRINT_REGSITER_CARD= Register Card
+
+FOOT_EXAM = Foot Exam
+FOOT_SEARCH = Search
+FOOT_SAVE = Save
