add default models to view

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -974,3 +974,17 @@ PRINT_REGSITER_CARD= Register Card
 FOOT_EXAM = Foot Exam
 FOOT_SEARCH = Search
 FOOT_SAVE = Save
+FOOT_CASE_NO = CaseNo.
+FOOT_CTIME = CreateTime
+FOOT_EDU = Educated
+FOOT_DOC = Doc.
+FOOT_1 = Pos.1
+FOOT_2 = Pos.2
+FOOT_3 = Pos.3
+FOOT_4 = Pos.4
+FOOT_5 = Pos.5
+FOOT_6 = Pos.6
+FOOT_7 = Pos.7
+FOOT_8 = Pos.8
+FOOT_9 = Pos.9
+FOOT_10 = Pos.10
