[Feature] Add three type case in main UI, and compatible to enter case management UI.

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -991,8 +991,14 @@ FOOT_10 = Pos.10
 
 HIV_TAB=HIV
 HIV_CASE=HIV
+HIV_CASE_MANAGEMENT = HIV Case Management
 
+DIABETES_CASE_MANAGEMENT=Diabetes Case Management
 DIABETES_CASE=Diabetes
 
+WOUND_CASE_MANAGEMENT=Wound Case Management
 WOUND_CASE=Wound
+
 CASE_TYPE=Case Type
+
+
