[Feature] Diabetes function complete, search need to be confirmed

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -995,6 +995,8 @@ HIV_CASE_MANAGEMENT = HIV Case Management
 
 DIABETES_CASE_MANAGEMENT=Diabetes Case Management
 DIABETES_CASE=Diabetes
+DIABETES_RESET=Reset
+DIABETES_NEW_RECORD=New
 
 WOUND_CASE_MANAGEMENT=Wound Case Management
 WOUND_CASE=Wound
