Diabetes UI  update
Conflicts:
	src/casemgmt/Tab_FootCase.java

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -974,7 +974,7 @@ PRINT_REGSITER_CARD= Register Card
 FOOT_EXAM = Foot Exam
 FOOT_SEARCH = Search
 FOOT_SAVE = Save
-FOOT_CASE_NO = CaseNo.
+FOOT_CASE_RECORD_NO = Record No.
 FOOT_CTIME = CreateTime
 FOOT_EDU = Educated
 FOOT_DOC = Doc.
