[UI] HIV tab. Everything done. Except save back to vaccine and sexual disease.

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -1004,3 +1004,41 @@ WOUND_CASE=Wound
 CASE_TYPE=Case Type
 
 
+PHHD=Hypertensive disorders
+PHCD=Cerebrovascular disease
+PHHC=High cholesterol
+PHDM=Diabetes Mellitus
+PHTYPEA=Type A hepatitis
+PHTYPEB=Type B hepatitis
+PHTYPEC=Type C hepatitis
+PHMALIG=Malignancies
+HD=Heart disease
+PHNS=Nephrotic syndrome
+PHSMOKE=Smoke
+PHALCOHOLISM=Alcoholism
+PHOW=Over weight
+PHOTHER=Others
+
+IHHC=I have high cholesterol
+IHDM=I have Diabetes Mellitus
+IHEBP=I have elevated blood pressure, heart disease or stroke
+
+FMHHC=Any of immediate family members have high cholesterol
+FMHDM=Any of immediate family members have diabetes mellitus
+FMHEBP=Any of immediate family members have elevated blood pressure, heart disease or stroke
+
+WSVD=Was suffering from venereal disease
+10SP=Over 10 sexual partners
+HSIWS=Had sexual intercourse with strangers
+
+IDUAGE=IDU age
+IDUDURATION=IDU duration
+WTD=Was taking drugs 
+HUID=Had used injectable drugs
+SN=Sharing needle
+SW=Sharing water
+SNW=Sharing needle and water
+
+METHADONE=Methadone
+STARTMETHADONE=Started using Methadone
+STATICSMETHADONE=Statistics of taking methadone
