[Enhance] search condition in case management worklist

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -1002,7 +1002,7 @@ WOUND_CASE_MANAGEMENT=Wound Case Management
 WOUND_CASE=Wound
 
 CASE_TYPE=Case Type
-
+CASE_REG_TIME= Registration Time:
 
 PHHD=Hypertensive disorders
 PHCD=Cerebrovascular disease
