[feature] add JFrame to take imgae from camera

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -906,6 +906,7 @@ PHARMACYSTOCK=Pharmacy Stock
 CODEMAINTENANCE=Code Maintenance
 IMAGEMANAGEMENT=Image Management
 TAKEIMAGE=Take Image
+SAVEIMAGE=Save Image
 
 VENDOR=Vendor
 PURCHASEDATE=Purchase date
