[UI] Add Wound Tab

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -1045,3 +1045,4 @@ SNW=Sharing needle and water
 METHADONE=Methadone
 STARTMETHADONE=Started using Methadone
 STATICSMETHADONE=Statistics of taking methadone
+WOUND_TAKE_IMAGE=Take Image
