change some UI behavior: 1. user can't create H&D case if not closed. 2. show finish time instead of reg time in case management work list 3. set the case finish status as false in the entry of creating case.

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -1060,5 +1060,6 @@ WOUND_CASE_FEVER = Fever
 WOUND_CASE_TENDER_LUMP = Tender Lump
 WOUND_CASE_NOT_HEALING = Not Healing
 
+CASE_MANAGEMENT_FINISH_TIME = Finish Time
 
 
