[UI] Wound Assessment done. And added to Frm_Case

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -1059,6 +1059,9 @@ WOUND_CASE_PUS_SMELL = Pus_Smell
 WOUND_CASE_FEVER = Fever
 WOUND_CASE_TENDER_LUMP = Tender Lump
 WOUND_CASE_NOT_HEALING = Not Healing
+WOUND_CREATE_DATE = Create Date
+WOUND_ASSESSMENT = Wound Assessment
+
 
 CASE_MANAGEMENT_FINISH_TIME = Finish Time
 
