[feature] mobile health (need to test on Linux)

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -38,6 +38,8 @@ CASHIER=Cashier
 POLINLIC_MANAGEMENT=Polinlic Management
 CASE_MANAGEMENT=Case Management
 MOBILE_HEALTH=Mobile Health
+GO_MOBILE_HEALTH=Go Mobile Health
+RETURN_FROM_MH=Return from MH
 
 @RADIOLOGY
 NO=No
