--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -1066,7 +1066,9 @@ WOUND_ASSESSMENT = Wound Assessment
 WOUND_CASE_CONFIRM_DELETE = Delete ?
 WOUND_CASE_CONFIRM_TITLE = Info
 WOUND_CASE_CONFIRM_DEL_SUCC = Delete Success!
+WOUND_CASE_CONFIRM_SAVE_SUCC = Save Success!
+WOUND_CASE_CONFIRM_SAVE_FAIL = Save Failed
 
 CASE_MANAGEMENT_FINISH_TIME = Finish Time
-
+IMPORTCSV=Import csv
 
