[Feature] add severity setting & searching by severity in case management

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -1070,5 +1070,6 @@ WOUND_CASE_CONFIRM_SAVE_SUCC = Save Success!
 WOUND_CASE_CONFIRM_SAVE_FAIL = Save Failed
 
 CASE_MANAGEMENT_FINISH_TIME = Finish Time
+CASE_MANAGEMENT_SEVERITY = Severity:
 IMPORTCSV=Import csv
 
