init search case button in main UI

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -1069,6 +1069,7 @@ WOUND_CASE_CONFIRM_DEL_SUCC = Delete Success!
 WOUND_CASE_CONFIRM_SAVE_SUCC = Save Success!
 WOUND_CASE_CONFIRM_SAVE_FAIL = Save Failed
 
+CASE_SEARCH = Case Search
 CASE_MANAGEMENT_FINISH_TIME = Finish Time
 CASE_MANAGEMENT_SEVERITY = Severity:
 IMPORTCSV=Import csv
