--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -903,6 +903,7 @@ PLEASEENTERVALIDNUMBER=Please enter valid number
 REPEATPERIODHASDATA=Error! Repeated period existed data.
 PERSONNELMANAGEMENT=Personnel Management
 STOCKMANAGEMENT=Stock Management
+IMAGEMANAGEMENT=Image Management
 BEDMANAGEMENT=Bed Management
 PHARMACYSTOCK=Pharmacy Stock
 CODEMAINTENANCE=Code Maintenance
