[Feature] Show Wound and HIV History.

--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -1078,3 +1078,5 @@ CASE_MANAGEMENT_FINISH_TIME = Finish Time
 CASE_MANAGEMENT_SEVERITY = Severity:
 IMPORTCSV=Import csv
 
+HIV_HISTORY=HIV_History
+WOUND_HISTORY=Wound_History
