--- a/src/lang/language_en.properties
+++ b/src/lang/language_en.properties
@@ -1074,3 +1074,4 @@ CASE_MANAGEMENT_FINISH_TIME = Finish Time
 CASE_MANAGEMENT_SEVERITY = Severity:
 IMPORTCSV=Import csv
 
+HIV_HISTORY=HIV_History
