--- a/src/lang/language.properties
+++ b/src/lang/language.properties
@@ -851,7 +851,7 @@ YOUNEEDGIVEMOREKEYWORDS=You need give more keywords.
 CANYOUTAKENOUTDIAGNOSISDATALASTTIME=Can you taken out Diagnosis data last time?
 
 @ modify of original property
-SHIFT_MANAGEMENT=Schedule Management
+SHIFT_MANAGEMENT=Shift Management
 STAFF_MANAGEMENT=HR Management
 STAFFINFOMATION=Staff Information
 MEDICALRECORDSUMMARY=Summary
@@ -996,14 +996,14 @@ FOOT_10 = Pos.10
 
 HIV_TAB=HIV
 HIV_CASE=HIV
-HIV_CASE_MANAGEMENT = HIV Case Management
+HIV_CASE_MANAGEMENT = HIV Care
 
-DIABETES_CASE_MANAGEMENT=Diabetes Case Management
+DIABETES_CASE_MANAGEMENT=Diabetes Care
 DIABETES_CASE=Diabetes
 DIABETES_RESET=Reset
 DIABETES_NEW_RECORD=New
 
-WOUND_CASE_MANAGEMENT=Wound Case Management
+WOUND_CASE_MANAGEMENT=Wound Care
 WOUND_CASE=Wound
 
 CASE_TYPE=Case Type
@@ -1076,7 +1076,18 @@ CASE_SEARCH_PATIENT_LIST = Case Management Bring-in Patient List
 CASE_PATIENT_ID = ID 
 CASE_MANAGEMENT_FINISH_TIME = Finish Time
 CASE_MANAGEMENT_SEVERITY = Severity:
+IP=IP
+PUBLICHEALTH=Public Health
+UPLOADCOMPLETE=Upload Complete
 IMPORTCSV=Import csv
 
 HIV_HISTORY=HIV_History
 WOUND_HISTORY=Wound_History
+ALL_MEDICAL_HISTORY=All Medical History
+TITLETOTNO=Registered No :
+TITLEFINISHNO=Finished No :
+TITLEHISTORYRECORD=History Record
+TITLEBEDHISTORYRECORD=Inpatient History Record
+TOTALINPNO=Total inpatient No.
+GUIDELINE=Guideline
+HEALTHEDUCATION=Health Education
